<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.firefly.prefs.BackButtonPreference />

    <PreferenceCategory
        android:title="@string/preference_category_java_tweaks"
        app2:iconSpaceReserved="false">

        <Preference
            android:key="install_jre"
            android:persistent="false"
            android:summary="@string/multirt_subtitle"
            android:title="@string/multirt_title"
            app2:iconSpaceReserved="false"
            />

        <androidx.preference.EditTextPreference
            android:dialogTitle="@string/mcl_setting_title_javaargs"

            android:key="javaArgs"
            android:singleLine="true"
            android:summary="@string/mcl_setting_subtitle_javaargs"
            android:title="@string/mcl_setting_title_javaargs"
            app2:iconSpaceReserved="false"/>

        <net.kdt.pojavlaunch.firefly.prefs.CustomSeekBarPreference
            android:key="allocation"

            android:summary="@string/zh_setting_java_memory_desc"
            android:title="@string/mcl_memory_allocation"
            app2:showSeekBarValue="true"
            app2:seekBarIncrement="8"
            app2:iconSpaceReserved="false"/>

        <SwitchPreference
            android:defaultValue="true"
            android:key="java_sandbox"
            android:summary="@string/mcl_setting_java_sandbox_subtitle"
            android:title="@string/mcl_setting_java_sandbox"
            app2:iconSpaceReserved="false"/>

    </PreferenceCategory>


</PreferenceScreen>