<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">

    <net.kdt.pojavlaunch.firefly.prefs.BackButtonPreference />

    <PreferenceCategory
        android:title="@string/preference_category_miscellaneous"
        app2:iconSpaceReserved="false"
        >

        <SwitchPreference
            android:defaultValue="false"
            android:key="arc_capes"
            android:summary="@string/arc_capes_desc"
            android:title="@string/arc_capes_title"
            app2:iconSpaceReserved="false"
            />

        <ListPreference
            android:defaultValue="AUTO"
            android:entries="@array/version_download_source_entries"
            android:entryValues="@array/version_download_source_values"
            android:key="minecraft_download_mirror"
            android:summary="@string/version_download_source_summary"
            android:title="@string/version_download_source_title"
            app2:iconSpaceReserved="false" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="versionIsolation"
            android:summary="@string/version_isolation_summary"
            android:title="@string/version_isolation_title"
            app2:iconSpaceReserved="false" />

    </PreferenceCategory>

</PreferenceScreen>
